--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Passing single input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +38,105 @@
     "pred = neural_network(input, weight)\n",
     "print(pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Passing multiple inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def w_sum(a, b):\n",
+    "    assert (len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def neural_network(input, weights):\n",
+    "    pred = w_sum(input, weights)\n",
+    "    return pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = [0.1, 0.2, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#toes = [8.5, 9.5, 9.9, 9.0]\n",
+    "#wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "#nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "#input = [toes[0], wlrec[0], nfans[0]]\n",
+    "\n",
+    "#pred = neural_network(input, weight)\n",
+    "\n",
+    "#print(pred)\n",
+    "\n",
+    "## Logicall true but returns error. Fixxed with Numpy code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.85  0.065 0.12 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "weights = np.array([0.1, 0.2,0])\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    pred = input.dot(weights)\n",
+    "    return pred\n",
+    "\n",
+    "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "\n",
+    "pred = neural_network(input, weight)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
