--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -43,12 +43,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Passing multiple inputs"
+    "Passing multiple inputs - works using dot product / weighted sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,40 +82,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#toes = [8.5, 9.5, 9.9, 9.0]\n",
-    "#wlrec = [0.65, 0.8, 0.8, 0.9]\n",
-    "#nfans = [1.2, 1.3, 0.5, 1.0]\n",
-    "\n",
-    "#input = [toes[0], wlrec[0], nfans[0]]\n",
-    "\n",
-    "#pred = neural_network(input, weight)\n",
-    "\n",
-    "#print(pred)\n",
-    "\n",
-    "## Logicall true but returns error. Fixxed with Numpy code below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.85  0.065 0.12 ]\n"
+      "0.9800000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "toes = [8.5, 9.5, 9.9, 9.0]\n",
+    "wlrec = [0.65, 0.8, 0.8, 0.9]\n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "input = [toes[0], wlrec[0], nfans[0]]\n",
+    "\n",
+    "pred = neural_network(input, weights)\n",
+    "\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9800000000000001\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "weights = np.array([0.1, 0.2,0])\n",
+    "weights = np.array([0.1, 0.2, 0])\n",
     "\n",
     "def neural_network(input, weights):\n",
     "    pred = input.dot(weights)\n",
@@ -126,8 +132,105 @@
     "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
     "\n",
     "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting multiple outputs from single inputs - works similar but with element multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.195, 0.13, 0.5850000000000001]\n"
+     ]
+    }
+   ],
+   "source": [
+    "weights = [0.3, 0.2, 0.9]\n",
     "\n",
-    "pred = neural_network(input, weight)\n",
+    "wlrec = [0.65, 0.8, 0.9]\n",
+    "\n",
+    "input = wlrec[0]\n",
+    "\n",
+    "def ele_mul (number, vector):\n",
+    "    output = [0,0,0]\n",
+    "    assert (len(output) == len(vector))\n",
+    "\n",
+    "    for i in range(len(vector)):\n",
+    "        output[i] = number * vector[i]\n",
+    "    return output\n",
+    "\n",
+    "def neural_network(inputs, weights):\n",
+    "    pred = ele_mul(input, weights)\n",
+    "    return pred\n",
+    "\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predicting with multiple inputs and outputs - uses weigthed sum and vector maths multiplication of the vector resulting from the weighted sum with each vector of the mtaix formed for each subsewuent weight."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0.9650000000000001, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def w_sum(a,b):\n",
+    "    assert (len(a) == len(b))\n",
+    "    output = 0\n",
+    "    for i in range(len(a)):\n",
+    "        output += (a[i] * b[i])\n",
+    "    return output\n",
+    "\n",
+    "def vect_mat_mul(vect, matrix):\n",
+    "    assert (len(vect) == len(matrix))\n",
+    "    output = [0,0,0]\n",
+    "\n",
+    "    for i in range(len(vect)):\n",
+    "        output[1] = w_sum(vect, matrix[i])\n",
+    "    return output\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    pred = vect_mat_mul(input, weights)\n",
+    "    return pred\n",
+    "\n",
+    "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "\n",
+    "weights = [[0.1, 0.1, -0.3], #hurt?\n",
+    "           [0.1, 0.2, 0.0],  #win?\n",
+    "           [0.0, 1.3, 0.1]   #sad?\n",
+    "           ]\n",
+    "\n",
+    "pred = neural_network(input, weights)\n",
     "print(pred)"
    ]
   },
