--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -233,6 +233,110 @@
     "pred = neural_network(input, weights)\n",
     "print(pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stacked Networks - Multiple layers of the neural network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1.599, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ih_wgt = [ \n",
+    "    [0.1, 0.2, -0.1], # hid[0]\n",
+    "    [-0.1,0.1, 0.9],  # hid[1] \n",
+    "    [0.1, 0.4, 0.1]   # hid[2]\n",
+    "    ] \n",
+    "\n",
+    "hp_wgt = [\n",
+    "    [0.3, 1.1, -0.3], # hurt?\n",
+    "    [0.1, 0.2, 0.0],  # win? \n",
+    "    [0.0, 1.3, 0.1]   # sad?\n",
+    "    ] \n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    hid = vect_mat_mul(input,weights[0]) \n",
+    "    pred = vect_mat_mul(hid,weights[1]) \n",
+    "    return pred\n",
+    "\n",
+    "toes = [8.5, 9.5, 9.9, 9.0] \n",
+    "wlrec = [0.65,0.8, 0.8, 0.9] \n",
+    "nfans = [1.2, 1.3, 0.5, 1.0]\n",
+    "\n",
+    "input = [toes[0],wlrec[0],nfans[0]] \n",
+    "pred = neural_network(input,weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2135 0.145  0.5065]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy Version\n",
+    "import numpy as np\n",
+    "\n",
+    "#toes % win # fans\n",
+    "ih_wgt = np.array([\n",
+    "    [0.1, 0.2, -0.1], # hid[0]\n",
+    "    [-0.1, 0.1, 0.9], # hid[1]\n",
+    "    [0.1, 0.4, 0.1]   # hid[2]\n",
+    "]).T\n",
+    "\n",
+    "# hid[0] hid[1] hid[2]\n",
+    "hp_wgt = np.array([\n",
+    "[0.3, 1.1, -0.3], # hurt?\n",
+    "[0.1, 0.2, 0.0],  # win?\n",
+    "[0.0, 1.3, 0.1]   # sad?\n",
+    "]).T\n",
+    "\n",
+    "weights = [ih_wgt, hp_wgt]\n",
+    "\n",
+    "def neural_network(input, weights):\n",
+    "    hid = input.dot(weights[0])\n",
+    "    pred = hid.dot(weights[1])\n",
+    "    return pred\n",
+    "\n",
+    "toes = np.array([8.5, 9.5, 9.9, 9.0])\n",
+    "wlrec = np.array([0.65, 0.8, 0.8, 0.9])\n",
+    "nfans = np.array([1.2, 1.3, 0.5, 1.0])\n",
+    "\n",
+    "input = np.array([toes[0], wlrec[0], nfans[0]])\n",
+    "\n",
+    "pred = neural_network(input, weights)\n",
+    "print(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
