--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<b>Forward Propagation</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Passing single input"
    ]
   },
@@ -556,10 +563,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4,)\n",
+      "(2, 4)\n",
+      "The columns of the left matrix must line up with the rows of the right matrix\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.shape)\n",
+    "print(c.shape)\n",
+    "print(\"The columns of the left matrix must line up with the rows of the right matrix\")\n",
+    "\n",
+    "a = np.zeros((2,4)) # 2 by 4 matrix\n",
+    "b = np.zeros((4,3)) # 4 by 3 matrix\n",
+    "c = a.dot(b)\n",
+    "print(c.shape)"
+   ]
   }
  ],
  "metadata": {
