--- a/Chapter-4.ipynb
+++ b/Chapter-4.ipynb
@@ -1257,10 +1257,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:0.30250000000000005 Prediction:0.25\n",
+      "Error:0.17015625000000004 Prediction:0.3875\n",
+      "Error:0.095712890625 Prediction:0.49062500000000003\n",
+      "Error:0.05383850097656251 Prediction:0.56796875\n",
+      "Error:0.03028415679931642 Prediction:0.6259765625\n",
+      "Error:0.0170348381996155 Prediction:0.669482421875\n",
+      "Error:0.00958209648728372 Prediction:0.70211181640625\n",
+      "Error:0.005389929274097089 Prediction:0.7265838623046875\n",
+      "Error:0.0030318352166796153 Prediction:0.7449378967285156\n",
+      "Error:0.0017054073093822882 Prediction:0.7587034225463867\n",
+      "Error:0.0009592916115275371 Prediction:0.76902756690979\n",
+      "Error:0.0005396015314842384 Prediction:0.7767706751823426\n",
+      "Error:0.000303525861459885 Prediction:0.7825780063867569\n",
+      "Error:0.00017073329707118678 Prediction:0.7869335047900676\n",
+      "Error:9.603747960254256e-05 Prediction:0.7902001285925507\n",
+      "Error:5.402108227642978e-05 Prediction:0.7926500964444131\n",
+      "Error:3.038685878049206e-05 Prediction:0.7944875723333098\n",
+      "Error:1.7092608064027242e-05 Prediction:0.7958656792499823\n",
+      "Error:9.614592036015323e-06 Prediction:0.7968992594374867\n",
+      "Error:5.408208020258491e-06 Prediction:0.7976744445781151\n",
+      "Error:5.408208020258491e-06 Prediction:0.7976744445781151\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hot and cold is innefficient. You have to predict three time for each weigh update.\n",
+    "# Even if you know the direection of the error, you don't know the amount of steps neeecssary to drive it to zero - so to speak\n",
+    "\n",
+    "# So let’s measure the error and find the direction and amount!\n",
+    "weight = 0.5\n",
+    "goal_pred = 0.8\n",
+    "input = 0.5\n",
+    "\n",
+    "for iteration in range(20):\n",
+    "    pred = input * weight\n",
+    "    error = (pred - goal_pred) ** 2 \n",
+    "    direction_and_amount = (pred - goal_pred) * input # Scaling, negative reversal and stopping. Multipling the pure error with the input = gradint descent which allows you to calculate the amount and direction to change the weigtht to reduce the error.\n",
+    "    weight = weight - direction_and_amount\n",
+    "    print(\"Error:\" + str(error) + \" Prediction:\" + str(pred))\n",
+    "\n",
+    "print(\"Error:\" + str(error) + \" Prediction:\" + str(pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is direction_and_amount?<br>\n",
+    "direction_and_amount represents how you want to change weight. The first part b is what I call pure error, which equals (pred - goal_pred). (More about this shortly.) \n",
+    "The second part c is the multiplication by the input that performs scaling, negative reversal, and stopping, modifying the pure error so it’s ready to update weight.\n",
+    "\n",
+    "What is the pure error?<br>\n",
+    "The pure error is (pred - goal_pred), which indicates the raw direction and amount you missed. If this is a positive number, you predicted too high, and vice versa. \n",
+    "If this is a big number, you missed by a big amount, and so on.\n",
+    "What are scaling, negative reversal, and stopping?\n",
+    "These three attributes have the combined effect of translating the pure error into the absolute amount you want to change weight. \n",
+    "They do so by addressing three major edge cases where the pure error isn’t sufficient to make a good modification to weight.\n",
+    "\n",
+    "What is stopping?<br>\n",
+    "Stopping is the first (and simplest) effect on the pure error caused by multiplying it by input. Imagine plugging a CD player into your stereo. \n",
+    "If you turned the volume all the way up but the CD player was off, the volume change wouldn’t matter. Stopping addresses this in a neural network. \n",
+    "If input is 0, then it will force direction_and_amount to also be 0. You don’t learn (change the volume) when input is 0, because there’s nothing to learn. \n",
+    "Every weight value has the same error, and moving it makes no difference because pred is always 0.\n",
+    "\n",
+    "What is negative reversal?<br>\n",
+    "This is probably the most difficult and important effect. Normally (when input is positive), moving weight upward makes the prediction move upward. \n",
+    "But if input is negative, then all of a sudden weight changes directions! When input is negative, moving weight up makes the prediction go down. \n",
+    "It’s reversed! How do you address this? Well, multiplying the pure error by input will reverse the sign of direction_and_amount in the event that input is negative. \n",
+    "This is negative reversal, ensuring that weight moves in the correct direction even if input is negative.\n",
+    "\n",
+    "What is scaling?<br>\n",
+    "Scaling is the third effect on the pure error caused by multiplying it by input. Logically, if input is big, your weight update should also be big. This is more of a side effect, because it often goes out of control. Later, you’ll use alpha to address when that happens."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# One iteration of gradient descent\n",
+    "\n",
+    "weight=0.1\n",
+    "alpha = 0.01\n",
+    "def neural_network(input, weight):  # 1. An empty network\n",
+    "    prediction = input * weight \n",
+    "    return prediction\n",
+    "\n",
+    "number_of_toes = [8.5] \n",
+    "win_or_lose_binary = [1] # (won!!!)\n",
+    "input = number_of_toes[0] \n",
+    "goal_pred = win_or_lose_binary[0]\n",
+    "\n",
+    "pred = neural_network(input,weight) \n",
+    "\n",
+    "error = (pred - goal_pred) ** 2     # 2. PREDICT: Making a prediction and evaluating error\n",
+    "\n",
+    "delta = pred - goal_pred            # 3. COMPARE: Calculating the node delta and putting it on the output node\n",
+    "\n",
+    "weight_delta = input * delta        # 4. LEARN: Calculating the weight delta and putting it on the weight"
+   ]
   }
  ],
  "metadata": {
