--- a/Chapter-4.ipynb
+++ b/Chapter-4.ipynb
@@ -1236,7 +1236,7 @@
     "weight = 0.5\n",
     "input = 0.5 \n",
     "goal_prediction = 0.8\n",
-    "step_amount = 0.001 # 0.2 to watch it go bac ang forth\n",
+    "step_amount = 0.001 # 0.2 to watch it go back and forth\n",
     "\n",
     "for iteration in range(1101):\n",
     "    prediction = input * weight\n",
@@ -1289,7 +1289,7 @@
     }
    ],
    "source": [
-    "# Hot and cold is innefficient. You have to predict three time for each weigh update.\n",
+    "# Hot and cold is innefficient. You have to predict three time for each weight update.\n",
     "# Even if you know the direection of the error, you don't know the amount of steps neeecssary to drive it to zero - so to speak\n",
     "\n",
     "# So let’s measure the error and find the direction and amount!\n",
@@ -1314,6 +1314,7 @@
     "What is direction_and_amount?<br>\n",
     "direction_and_amount represents how you want to change weight. The first part b is what I call pure error, which equals (pred - goal_pred). (More about this shortly.) \n",
     "The second part c is the multiplication by the input that performs scaling, negative reversal, and stopping, modifying the pure error so it’s ready to update weight.\n",
+    "Another name for direction and amount is sensitivity.\n",
     "\n",
     "What is the pure error?<br>\n",
     "The pure error is (pred - goal_pred), which indicates the raw direction and amount you missed. If this is a positive number, you predicted too high, and vice versa. \n",
@@ -1344,10 +1345,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One iteration of gradient descent\n",
+    "# One iteration of gradient descent to establish what and why we need to change for the the neural network to learn\n",
     "\n",
     "weight=0.1\n",
-    "alpha = 0.01\n",
+    "alpha = 0.01 # fixed before traing\n",
+    "\n",
     "def neural_network(input, weight):  # 1. An empty network\n",
     "    prediction = input * weight \n",
     "    return prediction\n",
@@ -1360,11 +1362,240 @@
     "pred = neural_network(input,weight) \n",
     "\n",
     "error = (pred - goal_pred) ** 2     # 2. PREDICT: Making a prediction and evaluating error\n",
-    "\n",
     "delta = pred - goal_pred            # 3. COMPARE: Calculating the node delta and putting it on the output node\n",
-    "\n",
-    "weight_delta = input * delta        # 4. LEARN: Calculating the weight delta and putting it on the weight"
+    "weight_delta = input * delta        # 4. LEARN: Calculating the weight delta and putting it on the weight\n",
+    "weight -= weight_delta * alpha      # 5. LEARN: Updating the weight. You multiply weight_delta by small alpha before updating weight to control how fast the network learns. If it learns too fast (jumping about on an error aginst weight ploted graph, where we are look for where slope is equal to zero), it can update weights too aggressively and overshoot."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----\n",
+      "Weight:0.0\n",
+      "Error:0.6400000000000001 Prediction:0.0\n",
+      "Delta:-0.8 Weight Delta:-0.8800000000000001\n",
+      "-----\n",
+      "Weight:0.8800000000000001\n",
+      "Error:0.02822400000000005 Prediction:0.9680000000000002\n",
+      "Delta:0.16800000000000015 Weight Delta:0.1848000000000002\n",
+      "-----\n",
+      "Weight:0.6951999999999999\n",
+      "Error:0.0012446784000000064 Prediction:0.76472\n",
+      "Delta:-0.03528000000000009 Weight Delta:-0.0388080000000001\n",
+      "-----\n",
+      "Weight:0.734008\n",
+      "Error:5.4890317439999896e-05 Prediction:0.8074088\n",
+      "Delta:0.007408799999999993 Weight Delta:0.008149679999999992\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Observe jump about of the error value for which we typically require alpha to not make it jump about as much aka lear to fast based on updated eight\n",
+    "weight, goal_pred, input = (0.0, 0.8, 1.1)\n",
+    "for iteration in range(4):\n",
+    "    print(\"-----\\nWeight:\" + str(weight))\n",
+    "    pred = input * weight\n",
+    "    error = (pred - goal_pred) ** 2\n",
+    "    delta = pred - goal_pred\n",
+    "    weight_delta = delta * input\n",
+    "    weight = weight - weight_delta\n",
+    "    print(\"Error:\" + str(error) + \" Prediction:\" + str(pred)) \n",
+    "    print(\"Delta:\" + str(delta) + \" Weight Delta:\" + str(weight_delta))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# So for the function: error = (pred - goal_pred) ** 2, the goal is to find the error = ((input * weight) - goal_pred) ** 2 while being at liber ty tweak any variable.\n",
+    "# For any input and goal_pred, an exact relationship is defined between error and weight, found by combining the prediction and error formulas. In this case: \n",
+    "# error = ((0.5 * weight) - 0.8) ** 2. You modify specific parts of an error function until the error value goes to 0. \n",
+    "# This error function is calculated using a combination of variables, some of which you can change (weights) \n",
+    "# and some of which you can’t (input data i.e reality of the world you are interested in, output data i.e goal_pred - \"setting your goal based on your capability and not what is necessary\n",
+    "# which changing could mean giving up\"), and the error logic i.e. a good measure of how much you have missed), likewise you can modify anything in pred function (learning) except the input.\n",
+    "# To sum it all up \"learning\" is all about automatically changing the prediction function so that it makes good predictions—aka, so that the subsequent error goes down to 0. \n",
+    "# That is adjust weight for error to become 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now given the relationship between error and weight, HOW can you know can you we use the formular to change weight so error goes in a particular direction.\n",
+    "# Well there is a method for doing this to any formular. \n",
+    "# It is called DERIVATIVE - however much I mive this part, the other part moves a certain amount as much.\n",
+    "# For example, red_length = blue_length * 2. 2 is the derivative. \n",
+    "# If derivative is postitive moving one variable moves the other in one direction and if the derivative is negative, moving one variable moves the other in the opposite direction.\n",
+    "# Thus derivate represents direction and amount."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:0.6400000000000001 Prediction:0.0\n",
+      "Error:0.02822400000000005 Prediction:0.9680000000000002\n",
+      "Error:0.0012446784000000064 Prediction:0.76472\n",
+      "Error:5.4890317439999896e-05 Prediction:0.8074088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another ways people look at deriative is a slope at a point of a line or curve.\n",
+    "# Remeber error = ((input * weight) - goal_pred) ** 2 i.e. error = ((0.5 * weight) - 0.8) ** 2\n",
+    "# Ploting it give a quadratic curve (from hot and cold above) and there is a point where error is 0, positive and negative. \n",
+    "# With derivatives, you can pick any two variables in any formula/function, and know how they interact.\n",
+    "# y = (((beta * gamma) ** 2) + (epsilon + 22 - x)) ** (1/2)\n",
+    "# For any function, you can pick two variables and compute how much one changes when you change the other. \n",
+    "# \n",
+    "# Bottom line: you’re going to build neural networks. A neural network is really just one thing: a bunch of weights you use to compute an error function. \n",
+    "# And for any error function (no matter how complicated), you can compute the relationship between any weight and the final error of the network.\n",
+    "# With this information, you can change each weight in the neural network to reduce error down to 0—and that’s exactly what you’re going to do.\n",
+    "# Derivative aka sensitivity between two variables - positive or negative(opposite movement() or zero (no movement regardless of what you do to another eg y=0*x).\n",
+    "# In our case weight_delta is our derivative. A derivative gives you the relationship between any two variables in a function. \n",
+    "# You use the derivative to determine the relationship between any weight and error.\n",
+    "# The slope of a line or curve always points in the opposite direction of the lowest point of the line or curve. \n",
+    "# So, if you have a negative slope, you increase weight to find the minimum of error. Your weight moves in opposite direction of the slope.\n",
+    "# This method for learning (finding error minimums) is called GRADIENT DESCENT! \n",
+    "\n",
+    "weight = 0.0\n",
+    "goal_pred = 0.8\n",
+    "input = 1.1\n",
+    "for iteration in range(4):\n",
+    "    pred = input * weight\n",
+    "    error = (pred - goal_pred) ** 2 \n",
+    "    delta = pred - goal_pred \n",
+    "    weight_delta = delta * input # Derivative (how fast the error changes, given changes in the weight)\n",
+    "    weight = weight - weight_delta\n",
+    "\n",
+    "    print(\"Error:\" + str(error) + \" Prediction:\" + str(pred))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:0.03999999999999998 Prediction:1.0\n",
+      "Error:0.3599999999999998 Prediction:0.20000000000000018\n",
+      "Error:3.2399999999999984 Prediction:2.5999999999999996\n",
+      "Error:29.159999999999986 Prediction:-4.599999999999999\n",
+      "Error:262.4399999999999 Prediction:16.999999999999996\n",
+      "Error:2361.959999999998 Prediction:-47.79999999999998\n",
+      "Error:21257.639999999978 Prediction:146.59999999999994\n",
+      "Error:191318.75999999983 Prediction:-436.5999999999998\n",
+      "Error:1721868.839999999 Prediction:1312.9999999999995\n",
+      "Error:15496819.559999991 Prediction:-3935.799999999999\n",
+      "Error:139471376.03999993 Prediction:11810.599999999997\n",
+      "Error:1255242384.3599997 Prediction:-35428.59999999999\n",
+      "Error:11297181459.239996 Prediction:106288.99999999999\n",
+      "Error:101674633133.15994 Prediction:-318863.79999999993\n",
+      "Error:915071698198.4395 Prediction:956594.5999999997\n",
+      "Error:8235645283785.954 Prediction:-2869780.599999999\n",
+      "Error:74120807554073.56 Prediction:8609344.999999996\n",
+      "Error:667087267986662.1 Prediction:-25828031.799999986\n",
+      "Error:6003785411879960.0 Prediction:77484098.59999996\n",
+      "Error:5.403406870691965e+16 Prediction:-232452292.5999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now that it works, let’s break it. Play around with the starting weight, goal_pred, and input numbers. \n",
+    "# You can set them all to just about anything, and the neural network will figure out how to predict the output given the input using the weight.\n",
+    "weight = 0.5\n",
+    "goal_pred = 0.8\n",
+    "input = 2 #0.5 - Change input into two we see the prediction jumping around and explode in value (over correcting) which is called divergence. Hence we introduce alpha\n",
+    "for iteration in range(20):\n",
+    "    pred = input * weight\n",
+    "    error = (pred - goal_pred) ** 2\n",
+    "    delta = pred - goal_pred\n",
+    "    weight_delta = input * delta\n",
+    "    weight = weight - weight_delta\n",
+    "    print(\"Error:\" + str(error) + \" Prediction:\" + str(pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error:0.03999999999999998 Prediction:1.0\n",
+      "Error:0.0144 Prediction:0.92\n",
+      "Error:0.005183999999999993 Prediction:0.872\n",
+      "Error:0.0018662400000000014 Prediction:0.8432000000000001\n",
+      "Error:0.0006718464000000028 Prediction:0.8259200000000001\n",
+      "Error:0.00024186470400000033 Prediction:0.815552\n",
+      "Error:8.70712934399997e-05 Prediction:0.8093312\n",
+      "Error:3.134566563839939e-05 Prediction:0.80559872\n",
+      "Error:1.1284439629823931e-05 Prediction:0.803359232\n",
+      "Error:4.062398266736526e-06 Prediction:0.8020155392\n",
+      "Error:1.4624633760252567e-06 Prediction:0.8012093235200001\n",
+      "Error:5.264868153690924e-07 Prediction:0.8007255941120001\n",
+      "Error:1.8953525353291194e-07 Prediction:0.8004353564672001\n",
+      "Error:6.82326912718715e-08 Prediction:0.8002612138803201\n",
+      "Error:2.456376885786678e-08 Prediction:0.8001567283281921\n",
+      "Error:8.842956788836216e-09 Prediction:0.8000940369969153\n",
+      "Error:3.1834644439835434e-09 Prediction:0.8000564221981492\n",
+      "Error:1.1460471998340758e-09 Prediction:0.8000338533188895\n",
+      "Error:4.125769919393652e-10 Prediction:0.8000203119913337\n",
+      "Error:1.485277170987127e-10 Prediction:0.8000121871948003\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Introducing alpha\n",
+    "# What’s the problem you’re trying to solve? That if the input is too big, then the weight update can overcorrect.\n",
+    "# What’s the symptom? That when you overcorrect, the new derivative is even larger in magnitude than when you started (although the sign will be the opposite).\n",
+    "# The solution is to multiply the weight update by a fraction to make it smaller.\n",
+    "# In most cases, this involves multiplying the weight update by a single real-valued number between 0 and 1, known as alpha so it doesn’t overshoot.\n",
+    "# Finding the appropriate alpha, even for state-of-the-art neural networks, is often done by guessing. \n",
+    "# You watch the error over time. If it starts diverging (going up), then the alpha is too high, and you decrease it.\n",
+    "# If learning is happening too slowly, then the alpha is too low, and you increase it.\n",
+    "# There are other methods than simple gradient descent that attempt to counter for this, but gradient descent is still very popular.\n",
+    "\n",
+    "weight = 0.5\n",
+    "goal_pred = 0.8\n",
+    "input = 2\n",
+    "alpha = 0.1\n",
+    "\n",
+    "for iteration in range(20):\n",
+    "    pred = input * weight\n",
+    "    error = (pred - goal_pred) ** 2 \n",
+    "    derivative = input * (pred - goal_pred) \n",
+    "    weight = weight - (alpha * derivative)\n",
+    "    print(\"Error:\" + str(error) + \" Prediction:\" + str(pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
